--- a/.github/workflows/check-for-new-sarasa-gothic.yml
+++ b/.github/workflows/check-for-new-sarasa-gothic.yml
@@ -1,9 +1,9 @@
 name: create tag if there's a new Sarasa Gothic version
 
 on:
-  # runs every 3 hours
+  # runs every 12:00 on Monday
   schedule:
-    - cron: '0 */3 * * *'
+    - cron: '0 12 * * MON'
   # allow manually trigger
   workflow_dispatch:
 
